--- a/modelizacion/modelizacion.tex
+++ b/modelizacion/modelizacion.tex
@@ -303,7 +303,7 @@ Revisión del \today $ $ a las \currenttime.
 \tableofcontents
 \part{Primer parcial}
 \input{input/1-analisis-dimensional}
-% \input{input/2-extensiones}
+\input{input/2-modelos-matriciales}
 % \part{Segundo parcial}
 % \input{input/3-ext-galois}
 % \part{Tercer parcial}
