05/02 a falta de dibujos

--- a/compleja/compleja.tex
+++ b/compleja/compleja.tex
@@ -247,6 +247,7 @@ numbered=no
 
 %%%% MATRICES
 \newcommand\mx[1]{\begin{bmatrix*}#1\end{bmatrix*}}
+\newcommand\px[1]{\begin{pmatrix*}#1\end{pmatrix*}}
 
 \newcommand{\suc}[3][1]{{#2}_{#1}, \ldots, {#2}_{#3}}
 \newcommand{\sucn}[1]{\suc{#1}{n}}
