--- a/modelizacion/modelizacion.tex
+++ b/modelizacion/modelizacion.tex
@@ -250,6 +250,8 @@ numbered=no
 
 %%%% MATRICES
 \newcommand\mx[1]{\begin{bmatrix*}#1\end{bmatrix*}}
+\newcommand\px[1]{\begin{pmatrix*}#1\end{pmatrix*}}
+\newcommand\Mx[1]{\begin{matrix*}#1\end{matrix*}}
 \newcommand\dmx[1]{\begin{pmatrix*}#1\end{pmatrix*}}
 \newcommand\Dmx[1]{
     \bordermatrix{#1}}
